# basket-analysis-handson

./: README.md  pyproject.toml
data/01_raw/: clean_retail.csv
data/04_model_output/: GE-top-items-associations
notebooks/: OnlineRetail_BasketAnalysis.ipynb  basket-analysis-handson.ipynb  basket-analysis-solutiosn.ipynb  basket_analysis_full.ipynb  basket_analysis_handson_1.ipynb
notebooks/outputs/2023-03-09/18-49-32/.hydra/: hydra.yaml
notebooks/outputs/2023-03-09/18-52-28/.hydra/: hydra.yaml
src/: ingest.py  model.py  transform.py
tests/: conftest.py  test_ingest.py
