[tool.poetry]
name = "basket-analysis-handson"
version = "0.1.0"
description = "Handson scripts & notebooks on basket analysis"
authors = ["Anh Dang"]
readme = "README.md"
packages = [{include = "basket_analysis_handson"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
pre-commit = "^3.1.1"
pdoc = "^13.0.0"
mlxtend = "^0.21.0"
graphviz = "^0.20.1"
seaborn = "^0.12.2"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
